--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.844.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.3",
     "@react-email/components": "^0.1.1",
     "@react-email/render": "^1.1.3",
@@ -24,8 +23,7 @@
     "compromise": "^14.14.4",
     "lucide-react": "^0.544.0",
     "ml-matrix": "^6.12.1",
-    "next": "^14.2.0",
-    "next-auth": "^4.24.11",
+    "next": "15.5.7",
     "openai": "^5.22.0",
     "prisma": "^6.16.3",
     "react": "^18.2.0",
